Added NavigationPage style for entire application. Temporary flat colour until custom renderer created.

--- a/TraceIt/App.xaml
+++ b/TraceIt/App.xaml
@@ -9,5 +9,9 @@
         <Style TargetType="Button">
             <Setter Property="CornerRadius" Value="25"/>
         </Style>
+
+        <Style TargetType="NavigationPage">
+            <Setter Property="BarBackgroundColor" Value="#000C72" />
+        </Style>
     </Application.Resources>
 </Application>
