--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -61,11 +61,22 @@
                                         </gradient:SfGradientView.BackgroundBrush>
                                     </gradient:SfGradientView>
 
-                                    <Label Text="{Binding Name}"/>
+                                    <Label Text="{Binding Name}"
+                                           HorizontalTextAlignment="Center"
+                                           AbsoluteLayout.LayoutFlags="All"
+                                           AbsoluteLayout.LayoutBounds="0.5, 0.1, 0.9, 0.2"
+                                           FontSize="17"
+                                           FontAttributes="Bold"/>
+                                    
                                     <Label Text="{Binding Credits, StringFormat='0 / {0} credits'}"/>
+                                    
                                     <Label Text="{Binding Standards, StringFormat='{0} standards'}"/>
 
-                                    <Button:SfButton Text="View Info" CornerRadius="30">
+                                    <Button:SfButton Text="View Info" CornerRadius="30"
+                                                     TextColor="Black"
+                                                     FontAttributes="Bold"
+                                                     AbsoluteLayout.LayoutFlags="All"
+                                                     AbsoluteLayout.LayoutBounds="0.5, 0.8, 0.7, 0.3">
                                         
                                         <!--#region GradientBackground -->
                                             <Button:SfButton.BackgroundGradient>
