Changed font size for list text and shifted View Info button up for Subjects grid.

--- a/TraceIt/Views/SubjectSelectionPage.xaml
+++ b/TraceIt/Views/SubjectSelectionPage.xaml
@@ -51,6 +51,7 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
 
                             <StackLayout>
                                 <Label Text="{Binding Name}" TextColor="Black"
+                                       FontSize="16"
                                        VerticalOptions="CenterAndExpand"/>
                             </StackLayout>
 
@@ -68,6 +69,7 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
 
                             <StackLayout>
                                 <Label Text="{Binding Name}" TextColor="White"
+                                       FontSize="16"
                                        VerticalOptions="CenterAndExpand"/>
                             </StackLayout>
 
