--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -28,11 +28,12 @@
                         HorizontalOptions="FillAndExpand">
 
             <!--#region GradientBackground -->
-            <gradient:SfGradientView>
+            <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
+                                     AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1">
                 <gradient:SfGradientView.BackgroundBrush>
                     <gradient:SfLinearGradientBrush>
                         <gradient:SfLinearGradientBrush.GradientStops>
-                            <gradient:SfGradientStop Color="#4B7BFF" Offset="0.0"/>
+                            <gradient:SfGradientStop Color="#4B7BFF" Offset="0"/>
                             <gradient:SfGradientStop Color="#071D57" Offset="1.0"/>
                         </gradient:SfLinearGradientBrush.GradientStops>
                     </gradient:SfLinearGradientBrush>
@@ -53,11 +54,12 @@
                             <border:SfBorder CornerRadius="28" >
                                 <AbsoluteLayout HeightRequest="180">
 
-                                    <gradient:SfGradientView>
+                                    <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
+                                                             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1">
                                         <gradient:SfGradientView.BackgroundBrush>
                                             <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
                                                 <gradient:SfLinearGradientBrush.GradientStops>
-                                                    <gradient:SfGradientStop Color="#150B47" Offset="0.0"/>
+                                                    <gradient:SfGradientStop Color="#150B47" Offset="0"/>
                                                     <gradient:SfGradientStop Color="#04020E" Offset="1"/>
                                                 </gradient:SfLinearGradientBrush.GradientStops>
                                             </gradient:SfLinearGradientBrush>
@@ -83,7 +85,7 @@
                                                      FontAttributes="Bold"
                                                      FontSize="17"
                                                      AbsoluteLayout.LayoutFlags="All"
-                                                     AbsoluteLayout.LayoutBounds="0.5, 0.9, 0.7, 0.2">
+                                                     AbsoluteLayout.LayoutBounds="0.5, 0.85, 0.7, 0.2">
                                         
                                         <!--#region GradientBackground -->
                                             <Button:SfButton.BackgroundGradient>
