--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -21,6 +21,49 @@
             <Setter Property="HorizontalTextAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="17"/>
         </Style>
+
+        <ResourceDictionary>
+            <Style TargetType="gradient:SfGradientView" x:Key="backgroundGradient">
+                <Setter Property="BackgroundBrush">
+                    <Setter.Value>
+                        <gradient:SfLinearGradientBrush>
+                            <gradient:SfLinearGradientBrush.GradientStops>
+                                <gradient:SfGradientStop Color="#4B7BFF" Offset="0"/>
+                                <gradient:SfGradientStop Color="#071D57" Offset="1.0"/>
+                            </gradient:SfLinearGradientBrush.GradientStops>
+                        </gradient:SfLinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style TargetType="gradient:SfGradientView" x:Key="subjectItemGradient">
+                <Setter Property="BackgroundBrush">
+                    <Setter.Value>
+                        <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
+                            <gradient:SfLinearGradientBrush.GradientStops>
+                                <gradient:SfGradientStop Color="#150B47" Offset="0"/>
+                                <gradient:SfGradientStop Color="#04020E" Offset="1"/>
+                            </gradient:SfLinearGradientBrush.GradientStops>
+                        </gradient:SfLinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style TargetType="Button:SfButton" x:Key="subjectButtonGradient">
+                <Setter Property="BackgroundGradient">
+                    <Setter.Value>
+                        <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
+                            <gradient:SfLinearGradientBrush.GradientStops>
+                                <gradient:SfGradientStop Color="#FFC400" Offset="0.0"/>
+                                <gradient:SfGradientStop Color="#FFA200" Offset="1"/>
+                            </gradient:SfLinearGradientBrush.GradientStops>
+                        </gradient:SfLinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            
+        </ResourceDictionary>
+        
     </ContentPage.Resources>
 
     <ContentPage.Content>
@@ -29,15 +72,8 @@
 
             <!--#region GradientBackground -->
             <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
-                                     AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1">
-                <gradient:SfGradientView.BackgroundBrush>
-                    <gradient:SfLinearGradientBrush>
-                        <gradient:SfLinearGradientBrush.GradientStops>
-                            <gradient:SfGradientStop Color="#4B7BFF" Offset="0"/>
-                            <gradient:SfGradientStop Color="#071D57" Offset="1.0"/>
-                        </gradient:SfLinearGradientBrush.GradientStops>
-                    </gradient:SfLinearGradientBrush>
-                </gradient:SfGradientView.BackgroundBrush>
+                                     AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                                     Style="{StaticResource backgroundGradient}">
             </gradient:SfGradientView>
             <!--#endregion-->
 
@@ -55,21 +91,12 @@
                                 <AbsoluteLayout HeightRequest="180">
 
                                     <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
-                                                             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1">
-                                        <gradient:SfGradientView.BackgroundBrush>
-                                            <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
-                                                <gradient:SfLinearGradientBrush.GradientStops>
-                                                    <gradient:SfGradientStop Color="#150B47" Offset="0"/>
-                                                    <gradient:SfGradientStop Color="#04020E" Offset="1"/>
-                                                </gradient:SfLinearGradientBrush.GradientStops>
-                                            </gradient:SfLinearGradientBrush>
-                                        </gradient:SfGradientView.BackgroundBrush>
-                                    </gradient:SfGradientView>
+                                                             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                                                             Style="{StaticResource subjectItemGradient}"/>
 
                                     <Label Text="{Binding Name}"
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.5, 0.1, 0.9, 0.2"
-                                           FontSize="17"
                                            FontAttributes="Bold"/>
                                     
                                     <Label Text="{Binding Credits, StringFormat='0 / {0} credits'}"
@@ -85,20 +112,8 @@
                                                      FontAttributes="Bold"
                                                      FontSize="17"
                                                      AbsoluteLayout.LayoutFlags="All"
-                                                     AbsoluteLayout.LayoutBounds="0.5, 0.85, 0.7, 0.2">
-                                        
-                                        <!--#region GradientBackground -->
-                                            <Button:SfButton.BackgroundGradient>
-                                                <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
-                                                    <gradient:SfLinearGradientBrush.GradientStops>
-                                                        <gradient:SfGradientStop Color="#FFC400" Offset="0.0"/>
-                                                        <gradient:SfGradientStop Color="#FFA200" Offset="1"/>
-                                                    </gradient:SfLinearGradientBrush.GradientStops>
-                                                </gradient:SfLinearGradientBrush>
-                                            </Button:SfButton.BackgroundGradient>
-                                            <!--#endregion-->
-                                        
-                                    </Button:SfButton>
+                                                     AbsoluteLayout.LayoutBounds="0.5, 0.85, 0.7, 0.2"
+                                                     Style="{StaticResource subjectButtonGradient}"/>
 
                                 </AbsoluteLayout>
                             </border:SfBorder>
