--- a/TraceIt/Views/TabbedPageHome.xaml
+++ b/TraceIt/Views/TabbedPageHome.xaml
@@ -2,11 +2,13 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:local="clr-namespace:TraceIt.Views"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.TabbedPageHome">
-  <!--Pages can be added as references or inline-->
-  <ContentPage Title="Tab 1" />
-  <ContentPage Title="Tab 2" />
-  <ContentPage Title="Tab 3" />
+
+    <local:SubjectsPage/>
+    <ContentPage Title="Tab 2" />
+    <ContentPage Title="Tab 3" />
+
 </TabbedPage>
